lab2/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec SEMI
    7       | Specifier FunDec CompSt
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | /* empty */

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error SEMI

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | LC DefList error RC

   29 StmtList: Stmt StmtList
   30         | /* empty */

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | IF LP Exp RP error ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | Exp LB error SEMI
   39     | IF LP error SEMI
   40     | LP Exp error SEMI
   41     | ID LP error SEMI
   42     | error SEMI

   43 DefList: Def DefList
   44        | /* empty */

   45 Def: Specifier DecList SEMI
   46    | Specifier error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 20 23 28 36 38 39 40 41 42 46
INT (258) 19 67
FLOAT (259) 68
ID (260) 15 17 18 21 22 41 62 63 65 66
SEMI (261) 4 5 6 8 20 31 33 38 39 40 41 42 45 46
COMMA (262) 10 24 48 69
ASSIGNOP (263) 50 51
RELOP (264) 54
PLUS (265) 55
MINUS (266) 56 60
STAR (267) 57
DIV (268) 58
AND (269) 52
OR (270) 53
DOT (271) 65
NOT (272) 61
TYPE (273) 11
LP (274) 21 22 34 35 36 37 39 40 41 59 62 63
RP (275) 21 22 23 34 35 36 37 59 62 63
LB (276) 19 20 38 64
RB (277) 19 64
LC (278) 13 27 28
RC (279) 13 27 28
STRUCT (280) 13 14
RETURN (281) 33
IF (282) 34 35 36 39
ELSE (283) 35 36
WHILE (284) 37
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 26 45 46
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19 20, on right: 9 10 19 20 26 49 50
FunDec (41)
    on left: 21 22 23, on right: 6 7
VarList (42)
    on left: 24 25, on right: 21 24
ParamDec (43)
    on left: 26, on right: 24 25
CompSt (44)
    on left: 27 28, on right: 7 32
StmtList (45)
    on left: 29 30, on right: 27 29
Stmt (46)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42, on right: 29 34 35
    36 37
DefList (47)
    on left: 43 44, on right: 13 27 28 43
Def (48)
    on left: 45 46, on right: 43
DecList (49)
    on left: 47 48, on right: 45 48
Dec (50)
    on left: 49 50, on right: 47 48
Exp (51)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68,
    on right: 31 33 34 35 36 37 38 40 50 51 52 53 54 55 56 57 58 59
    60 61 64 65 69 70
Args (52)
    on left: 69 70, on right: 62 69


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


state 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec SEMI
    7       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


state 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


state 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


state 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


state 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


state 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 15

   23 FunDec: error . RP

    RP  shift, and go to state 22


state 16

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


state 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


state 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error SEMI

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


state 20

    6 ExtDef: Specifier FunDec . SEMI
    7       | Specifier FunDec . CompSt

    SEMI  shift, and go to state 27
    LC    shift, and go to state 28

    CompSt  go to state 29


state 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


state 22

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


state 23

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


state 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


state 26

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error SEMI

    error  shift, and go to state 39
    INT    shift, and go to state 40


state 27

    6 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 6 (ExtDef)


state 28

   27 CompSt: LC . DefList StmtList RC
   28       | LC . DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 32


state 29

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


state 30

   45 Def: Specifier . DecList SEMI
   46    | Specifier . error SEMI

    error  shift, and go to state 42
    ID     shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


state 31

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


state 32

   43 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 32


state 33

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


state 34

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 48


state 35

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


state 36

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 25 (VarList)


state 37

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


state 38

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


state 39

   20 VarDec: VarDec LB error . SEMI

    SEMI  shift, and go to state 51


state 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


state 41

   27 CompSt: LC DefList . StmtList RC
   28       | LC DefList . error RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 28
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


state 42

   46 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


state 43

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error SEMI
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 26

    $default  reduce using rule 49 (Dec)


state 44

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


state 45

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 47 (DecList)


state 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


state 47

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


state 48

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error SEMI
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 26 (ParamDec)


state 49

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


state 50

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 71
    ParamDec         go to state 36


state 51

   20 VarDec: VarDec LB error SEMI .

    $default  reduce using rule 20 (VarDec)


state 52

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 53

   28 CompSt: LC DefList error . RC
   42 Stmt: error . SEMI

    SEMI  shift, and go to state 72
    RC    shift, and go to state 73


state 54

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


state 55

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


state 56

   41 Stmt: ID . LP error SEMI
   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 66 (Exp)


state 57

   60 Exp: MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 77


state 58

   61 Exp: NOT . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 78


state 59

   40 Stmt: LP . Exp error SEMI
   59 Exp: LP . Exp RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 79


state 60

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 80


state 61

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt
   36     | IF . LP Exp RP error ELSE Stmt
   39     | IF . LP error SEMI

    LP  shift, and go to state 81


state 62

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 82


state 63

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


state 64

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


state 65

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 84
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 28
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 85
    Stmt      go to state 65
    Exp       go to state 66


state 66

   31 Stmt: Exp . SEMI
   38     | Exp . LB error SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    SEMI      shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


state 67

   46 Def: Specifier error SEMI .

    $default  reduce using rule 46 (Def)


state 68

   50 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 97


state 69

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


state 70

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 98
    Dec      go to state 45


state 71

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


state 72

   42 Stmt: error SEMI .

    $default  reduce using rule 42 (Stmt)


state 73

   28 CompSt: LC DefList error RC .

    $default  reduce using rule 28 (CompSt)


state 74

   41 Stmt: ID LP . error SEMI
   62 Exp: ID LP . Args RP
   63    | ID LP . RP

    error  shift, and go to state 99
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76
    RP     shift, and go to state 100

    Exp   go to state 101
    Args  go to state 102


state 75

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 103

    $default  reduce using rule 66 (Exp)


state 76

   59 Exp: LP . Exp RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 104


state 77

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    STAR  shift, and go to state 91
    DIV   shift, and go to state 92
    DOT   shift, and go to state 95
    LB    shift, and go to state 105

    $default  reduce using rule 60 (Exp)


state 78

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT  shift, and go to state 95
    LB   shift, and go to state 105

    $default  reduce using rule 61 (Exp)


state 79

   40 Stmt: LP Exp . error SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    error     shift, and go to state 106
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 107
    LB        shift, and go to state 105


state 80

   33 Stmt: RETURN Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    SEMI      shift, and go to state 108
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 105


state 81

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt
   36     | IF LP . Exp RP error ELSE Stmt
   39     | IF LP . error SEMI

    error  shift, and go to state 109
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 110


state 82

   37 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 111


state 83

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


state 84

   42 Stmt: error . SEMI

    SEMI  shift, and go to state 72


state 85

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


state 86

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


state 87

   51 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 112


state 88

   54 Exp: Exp RELOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 113


state 89

   55 Exp: Exp PLUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 114


state 90

   56 Exp: Exp MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 75
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 76

    Exp  go to state 115


state 91

   57 Exp: Exp STAR . Exp
